--- a/Css/style.css
+++ b/Css/style.css
@@ -1,4 +1,4 @@
-/* General*/
+//* General*/
 .fondos{
     background-image: url("../img/nature1.jpg");
     background-repeat: no-repeat;
@@ -27,7 +27,7 @@ body {
     border: 5px;
     box-shadow: 0 0 30px rgba(253, 253, 253, 0.568) ;
     text-align: center;
-    margin-left: 450px;
+   
     padding: 20px;
     margin-top: 100px;
     color: white;
@@ -56,7 +56,7 @@ body {
 }
 
 .bienvenida{
-    margin-left: 100px;
+ 
     margin-top: 100px;
     text-align: center;
     color: white;
@@ -64,7 +64,7 @@ body {
 }
 
 .description{
-    margin-left: 100px;
+    
     margin-top: 100px;
     text-align: center;
     color: white;
@@ -94,13 +94,10 @@ body {
     box-shadow: 0 0 30px rgba(6, 170, 247, 0.568) ;
     margin-top: 50px;
     text-align: center;
-    margin-left: 400px;
     color: honeydew;
 }
 
 .description-carga{
-    
-    margin-left: 100px;
     margin-top: 100px;
     text-align: center;
     border-radius: 4px;
@@ -108,7 +105,6 @@ body {
 }
 
 .form-group-clave{
-    margin-left: 175px;
     margin-bottom: 25px;
 }
 /* Canje */
@@ -120,7 +116,7 @@ body {
     box-shadow: 0 0 30px rgba(15, 167, 255, 0.986) ;
     margin-top: 150px;
     text-align: center;
-    margin-left: 400px;
     color: honeydew;
 }
+
 
